--- a/style.css
+++ b/style.css
@@ -215,3 +215,8 @@
     border-bottom-right-radius: 16px;
     transition: width 0.2s linear;
 }
+#pace-slider {
+      accent-color: #00DC82 !important;
+  }
+
+  
